# quantum-IL

./: .gitignore  AGENTS.md  PROJECT_STATUS.md  README.md  pyproject.toml
docs/: BASELINE_COMPARISON.md  CODEX_PROMPT.md  QUANTUM_RL.md  REPORT.md
prompts/: CODEX_PROMPT.md
qbdp/: __init__.py  evaluate.py  evaluate_rlbench.py  refinement.py  tokenizer.py  train.py
qbdp/data/: __init__.py  minari_loader.py  robomimic_loader.py  synthetic.py
qbdp/experiments/: compare_baselines.py  compare_synthetic.py  gym_locomotion_diffusion_rl.py  quantum_rl.py  rlbench_imitation.py
qbdp/models/: __init__.py  baselines.py  born_prior.py  diffusion.py  quantum_rl.py
scripts/: compare_baselines.py  compare_synthetic.py  evaluate.py  evaluate_rlbench.py  gym_locomotion_diffusion_rl.py  rlbench_imitation.py  train.py  train_quantum_rl.py  update_status.py
tests/: test_data_and_experiments.py  test_models.py  test_quantum_rl.py
